# autorecover

./: .gitignore  CMakeLists.txt  controller.cpp  master.cpp  pbgen.sh  protocolDraft.txt  recover_service.grpc.pb.cc  recover_service.grpc.pb.h  recover_service.pb.cc  recover_service.pb.h  recover_service.proto  recoverer.cpp
grpc/examples/cpp/helloworld/: greeter_client.cc  greeter_server.cc
grpc/examples/cpp/tiny_social_network_service/: Makefile  README.md  data.csv  sns.grpc.pb.cc  sns.grpc.pb.h  sns.pb.cc  sns.pb.h  sns.proto  tsc  tsc.cc  tsd  tsd.cc
grpc/examples/protos/: helloworld.proto
